2003-08-09 John Fleck <jfleck@inkstain.net>

	* docs/C/Makefile.am
	* docs/C/multiload.xml
	adding updated docs from Chee Bin HOH

2003-08-08  Christian Neumair  <chris@gnome-de.org>

	* multiload.schemas.in: Commit patch from #116066.

2003-07-24  Kevin Vandersloot

	* schemas.in: Clean up strings as part of bug #116066

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify widget padding between the vbox and 
	action area of the dialog.  Thanks to <chris@gnome-de.org> 
	Christian - Manny Calavera - Neumair.

2003-07-21  Kevin Vandersloot

	* load-graph.c: Fix sizing due to recent panel changes and make saner.

Wed Jul 09 12:24:32 2003  George Lebl <jirka@5z.com>

	* linux-proc.c: Fixed up the network code to read the correct fields,
	  not crash on unknown network types, stop memcpy/memset weirdness,
	  still utterly utterly horrible code though

	* properties.c: respect key writability

2003-06-19  Kevin Vandersloot

	* main.c: Clamp the percentage between 0 and 100. Fixes bug #107407

2003-06-05  Ray Strode  <halfline@hawaii.rr.com>

	* properties.c (color_picker_set_cb): Add missing check for
	load average property (bug #114477).
	
2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>

	* load-graph.c:  Reduce padding on right & bottom inside edges of the frame.
	
2003-06-02  Kevin Vandersloot

	* load-graph.c: Use shadow-in on frame for better look. From Tuomas Kuosmanen.
	Fixes bug #79676

2003-06-02  Kevin Vandersloot

	* main.c: expand the applet for Fitt's law and fix issue when switching between different
	panels. Fixes bug #94139.
	
	* load-graph.c: fix some spacing issues.

2003-05-17  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify the action area of the preferences dialog.
	Correct the spacing of unit labels after spin controls.
	
	* GNOME_MultiloadApplet.xml:  Change "Run Detailed System Monitor" 
	menu item to "Open System Monitor".
	
2003-05-12  Kevin Vandersloot <kfv101@psu.edu>
