@@ -1,3 +1,13 @@
+2003-11-01  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Makefile.am: Remove deprecated flags.
+	* load-graph.c: (load_graph_destroy): Fix a leak.
+
+2003-10-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* load-graph.c: (load_graph_destroy): Fix a small leak.
+	Closes bug #125594.
+
 2003-08-09 John Fleck <jfleck@inkstain.net>
 
 	* docs/C/Makefile.am
